--- a/deployment.yaml
+++ b/deployment.yaml
@@ -54,3 +54,13 @@ spec:
             name: grega-dev-service
             port:
               number: 8080
+   - host: etiam.si
+     http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: grega-dev-service
+            port:
+              number: 8080
